website-next/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website
  labels:
    app: website
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`www.next.fluufff.org`) || Host(`next.fluufff.org`) || Host(`test-website.fluufff.org`)
    services:
    - kind: Service
      name: website
      port: http
